Fix for BUG#53298 "wrong result with semijoin (no semijoin strategy chosen)". Backporting of guilhem@mysql.com-20100519135042-hok0n23rvzb0nba5